--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <img src="images/mayorLee.jpeg" class="img-circle pull-left mayor-img" />
-                <blockquote>San Francisco is home to the world’s greatest entrepreneurs, the ones who have ‘disrupted’ numerous industries, and we are bringing those same disruptive technologies to improve delivery of City services for our residents. The Entrepreneurship-in-Residence program brings together government and startups to explore ways we can use technology to make government more accountable, efficient and responsive.<cite>Mayor Edwin Lee</cite></blockquote>
+                <blockquote>San Francisco is home to the world’s greatest entrepreneurs, the ones who have ‘disrupted’ numerous industries, and we are bringing those same disruptive technologies to improve delivery of City services for our residents. The Entrepreneurship-in-Residence program brings together government and startups to explore ways we can use technology to make government more accountable, efficient and responsive.&rdquo;<cite>Mayor Edwin Lee</cite></blockquote>
             </div>
         </div>
         <!-- /container -->
@@ -100,7 +100,7 @@
     <div class="container">
         <h1>Introducing the 2014 Cohort</h1>
         <div id="cohort-logos" class="row">
-            <p style="max-width: 65%; margin: 0 auto">The SF EIR program is a voluntary, sixteen-week collaboration to bring together the private sector and City departments to explore innovative solutions to civic challenges that can lower costs, increase revenue, and enhance productivity. 6 startups have been selected for the first cohort. Read more below.</p>
+            <p style="max-width: 65%; margin: 0 auto">The San Francisco Entrepreneurship-in-Residence program is a voluntary, sixteen-week collaboration to bring together the private sector and City departments to explore innovative solutions to civic challenges that can lower costs, increase revenue, and enhance productivity. Six startups have been selected for the first cohort. Read more below.</p>
             <div class="col-md-4">
                <a href="http://getbirdi.com" target="_blank" alt="Link to Birdi's website"><img src="images/birdi.png" class=""/></a>
                 <p>Birdi will work with the San Francisco Department of Public Health on air quality and health issues. Birdi is a smart device startup whose smart air monitor is more than a smoke detector. It tracks emergencies like fire and elevated carbon monoxide levels as well as air quality, providing recommendations to improve individual and neighborhood health and safety.</p>
@@ -128,7 +128,7 @@
         </div>
         <!-- /row -->
         <div class="row">
-            <h2>Interested in learning more about the next cohort?</h2>
+            <h2>Sign up to get updates on the program</h2>
             <div class="Apply" style="text-align: center; margin: 30px auto">
             <button class="button">Sign Up</button>
             </div>
